making onboarding great again

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,25 @@
-{{page-title "Onboarding"}}
+<header class="kHeader">
+    <div class="kLeftHeader">
+        <div class="kLeftLogo zb-breadcrumbs hide-nav-menu-button ember-view">
+            <button class="zb-button grey false icon-button left menu-button hide-nav-menu-button" aria-label="Menu" aria-expanded="false" type="button"></button>
+            <div class="logo">
+                <a href="#" class="active ember-view">
+                    <img width="83px" height="22px" src="/zycommon-web/assets/logo.svg"/>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="kRightHeader">
+        {{!-- {{#if (eq this.router.currentRouteName "sign-in")}} --}}
+        {{!-- <ZbButton @title="Help/FAQ" @icon="help" @thinTitle="true" class="help-button" style="font-size: 16px; font-weight: 300;" onclick="http://support.zybooks.com" target="_blank" rel="noopener noreferrer"/> --}}
 
-<h2 id="title">Welcome to Ember</h2>
+        <a class="zb-button help-button" href="http://support.zybooks.com" target="_blank" rel="noopener noreferrer" style="font-weight: 300;">
+            <i class="zb-icon material-icons me grey" role="img" aria-label="help" style="margin-right: 8px;">help</i>
+            Help/FAQ
+        </a>
+        <a href="http://www.zybooks.com/signup" class="ember-view logged-out-button zb-button raised" style="margin-left: 24px;">Create account</a>
+        {{!-- {{/if}} --}}
+    </div>
+</header>
 
 {{outlet}}
