--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -53,7 +53,6 @@
     line-height: 18.4px;
     padding-right: 16px;
     text-size-adjust: 100%;
-    width: 267.859px;
 }
 
 // Default Page Layout
@@ -89,7 +88,6 @@
     border-radius: 2px;
     display: flex;
     flex-direction: column;
-    height: 421px;
     margin-top: 48px;
     margin-right: auto;
     margin-bottom: 32px;
@@ -120,7 +118,7 @@
 .kLibraryBody {
     -webkit-font-smoothing: subpixel-antialiased;
     background-color: transparent;
-    display: block;
+    display: inline-block;
     font-family: sans-serif;
     margin-top: 0px;
     margin-left: 40px;
@@ -128,6 +126,12 @@
     margin-bottom: 0px;
     max-width: 1200px;
     text-size-adjust: 100%;
+    width: calc(100% - 80px);
+}
+
+.kBookHolder {
+    display: flex;
+    flex-direction: row;
 }
 
 .kSectionHeader {
@@ -158,9 +162,69 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 20px;
-    margin-right: 12;
+    margin-right: 12px;
     position: relative;
     text-decoration-thickness: auto;
     text-size-adjust: 100%;
     width: 265px;
+}
+
+.kzyBookHeader {
+    align-items: center;
+    height: 50px;
+    margin-left: 20px;
+    margin-right: 15px;
+    
+    width: 265;
+    
+
+}
+
+.kzyBookInfo {
+    display: flex;
+    flex-direction: column;
+    height: 268px;
+    width: 265px;
+}
+
+.kPrimaryInfo {
+    margin-left: 20px;
+    margin-right: 15px;
+    width: 230px;
+}
+
+.kHeading {
+    font-size: 22px;
+}
+
+.kSnippet {
+    font-size: 12px;
+    margin-top: 8px;
+}
+
+.kBookImg {
+    display: block;
+    opacity: 0.15; 
+    position: absolute;
+    width: 100%;
+}
+
+// zyBook pages
+.kChapter {
+    width: 1000px;
+    border-width: 1px;
+    line-height: 18.4px;
+    position: relative;
+    font-size: 15pt;
+    z-index: 0;
+}
+
+.kSection {
+    position: relative;
+    width: 980px;
+    border-width: 1px;
+    line-height: 18.4px;
+    font-size: 12pt;
+    z-index: 10;
+
 }
