--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -210,21 +210,46 @@
 }
 
 // zyBook pages
+.kflex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.kline-flex {
+    display: flex;
+    flex-direction: row;
+}
+
 .kChapter {
-    width: 1000px;
+    background-color: $primary;
     border-width: 1px;
-    line-height: 18.4px;
-    position: relative;
+    border-style: solid;
+    border-color: rgb(176,190,197);
     font-size: 15pt;
+    height: 36px;
+    padding-top: 18px;
+    padding-left: 5px;
+    line-height: 18.4px;
+    margin-bottom: -58px;
+    position: relative;
+    top: -58px;
+    width: 1000px;
     z-index: 0;
 }
 
 .kSection {
+    background-color: $secondary;
     position: relative;
-    width: 980px;
+    padding-top: 10px;
+    padding-left: 7px;
+    height: 20px;
+    width: 990px;
     border-width: 1px;
+    border-style: solid;
+    border-color: rgb(176,190,197);
     line-height: 18.4px;
     font-size: 12pt;
+    margin-left: 5px;
     z-index: 10;
-
 }
